# human-text-input-clustering

./: README.md  main.ipynb  pyproject.toml
data/: data_57.csv  data_57_clustered.csv  data_57_not_clustered.csv
ui_app/: app.py  data_utils.py  layout.py  test.py  utils.py
ui_app/data/: data_57_work.csv
